```toml
# --------------------------------------------------------------------------- #
# LedgerQuest Engine – pyproject.toml
#
# This file defines the build configuration, project metadata, dependency
# groups and contributor tooling for the LedgerQuest Engine code-base.
#
# The project follows PEP-621 for metadata, uses Hatchling as the build-backend,
# and leverages hatch-vcs for fully automated, git-tag-driven versioning.
#
# Production dependencies are kept minimal on-prem, while optional extras
# accommodate GPU workloads, development tooling, docs generation, and
# end-to-end testing. Continuous Integration pipelines rely on these settings
# to perform deterministic builds, security scanning, and type-checking.
# --------------------------------------------------------------------------- #

[build-system]
requires = [
    "hatchling>=1.24.0",
    "hatch-vcs>=0.3.0",
]
build-backend = "hatchling.build"

# --------------------------------------------------------------------------- #
# PEP-621 compliant metadata
# --------------------------------------------------------------------------- #
[project]
name            = "ledgerquest-engine"
description     = "A serverless, business-grade Python game framework "\
                  "for gamified enterprise applications."
readme          = "README.md"
requires-python = ">=3.9"
license         = {text = "Apache-2.0"}
keywords        = [
    "game-engine",
    "serverless",
    "aws",
    "ecs",
    "simulation",
    "gamification",
]
authors = [
    { name="LedgerQuest Dev Team", email="opensource@ledgerquest.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AWS CDK",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Version is provided automatically from git tags via hatch-vcs
dynamic = ["version"]

# --------------------------------------------------------------------------- #
# Core (runtime/production) dependencies
# --------------------------------------------------------------------------- #
dependencies = [
    "boto3~=1.34.0",
    "botocore~=1.34.0",
    "pydantic>=2.5,<3.0",
    "typing-extensions>=4.9",
    "numpy>=1.26,<2.0",
    "scipy>=1.11,<2.0",
    "aiohttp>=3.9,<4.0",
    "attrs>=23.2,<24.0",
    "immutables>=0.20",
    "msgspec>=0.18",
    "loguru>=0.7",
    "tenacity>=8.2",                      # exponential back-off utilities
    "rapidjson>=1.10",                   # faster JSON for game state SNAPs
]

# --------------------------------------------------------------------------- #
# Optional dependency groups (install via: `pip install .[dev]`)
# --------------------------------------------------------------------------- #
[project.optional-dependencies]

# Full AWS stack integration (SAM, CDK, IAM helpers)
aws = [
    "aws-cdk-lib>=2.128,<3.0",
    "constructs>=10.3,<11.0",
    "aws-sam-cli>=1.98,<2.0",
]

# GPU-accelerated numerical + graphics stack (builder images only)
gpu = [
    "cupy-cuda12x>=12.3,<13.0",
    "pyopengl>=3.1,<4.0",
    "moderngl>=5.8,<6.0",
    "pyrr>=0.10",                         # matrix/quaternion utils
]

# Development & linting
dev = [
    "black>=24.1,<25.0",
    "isort>=5.13,<6.0",
    "ruff>=0.2.0",
    "mypy>=1.8,<2.0",
    "pytest>=7.4,<8.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<5.0",
    "coverage>=7.4,<8.0",
    "hypothesis>=6.95,<7.0",
    "pre-commit>=3.6,<4.0",
    "types-boto3>=1.34.0",
]

# Documentation toolchain
docs = [
    "mkdocs>=1.5,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=0.24,<1.0",
    "pymdown-extensions>=10.5,<11.0",
]

# --------------------------------------------------------------------------- #
# Hatch-VCS configuration (automated versioning)
# --------------------------------------------------------------------------- #
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.sdist]
include = [
    "/ledgerquest_engine",    # Source code
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
only-include = ["ledgerquest_engine"]

# --------------------------------------------------------------------------- #
# Static type checking (mypy)
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version       = "3.11"
plugins              = ["pydantic.mypy"]
strict               = true
ignore_missing_imports = true
warn_unused_ignores  = true
show_error_codes     = true
namespace_packages   = true
allow_redefinition   = false

# --------------------------------------------------------------------------- #
# Code formatting (black) & import sorting (isort)
# --------------------------------------------------------------------------- #
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
skip-string-normalization = false

[tool.isort]
profile            = "black"
line_length        = 88
combine_as_imports = true
include_trailing_comma = true
multi_line_output  = 3

# --------------------------------------------------------------------------- #
# Ruff – ultra-fast linter (combines flake8/pylint rulesets)
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 88
target-version = "py311"
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "D",  # pydocstyle
  "UP", # pyupgrade
]
fix = true
unfixable = ["F401"]     # don't auto-remove unused imports (might be re-exporting)

# --------------------------------------------------------------------------- #
# Pytest configuration
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -ra --doctest-glob='*.md'"
testpaths = ["tests"]
asyncio_mode = "auto"

# --------------------------------------------------------------------------- #
# End of pyproject.toml
# --------------------------------------------------------------------------- #
```