```toml
# CanvasChain Symphony – Project rust_blockchain_nft_expert_071
# Root Cargo manifest.  Acts as a workspace aggregator *and* provides the shared
# `canvas_chain_core` library crate imported by all micro-services.

[package]
name          = "canvas_chain_symphony"
version       = "0.1.0"
edition       = "2021"
authors       = ["CanvasChain Dev Team <dev@canvas-chain.io>"]
description   = "An immersive, modular blockchain-NFT platform for generative art."
license       = "Apache-2.0"
repository    = "https://github.com/canvas-chain/symphony"
homepage      = "https://canvas-chain.io"
readme        = "README.md"
keywords      = ["blockchain", "nft", "generative-art", "defi", "rust"]
categories    = ["cryptography::cryptocurrencies", "multimedia::audio", "multimedia::graphics"]
rust-version  = "1.74"

################################################################################
# Workspace – each directory contains an independent micro-service binary.     #
################################################################################
[workspace]
members = [
    "composer_node",      # Custom Proof-of-Inspiration leader
    "minting_service",    # NFT factory + proxy deployment
    "remix_service",      # Derivative / interactive art mutations
    "marketplace_service",
    "royalty_stream",
    "governance_engine",
    "wallet_gateway",
    "defi_hub",
    "orchestrator",       # Event bus router & state-machine supervisor
    "nft_state_daemon",
]

################################################################################
# Shared library dependencies.  Individual services may add their own extras.  #
################################################################################
[dependencies]
# Async & concurrency
tokio               = { version = "1.32", features = ["full"] }
async-trait         = "0.1"
futures             = "0.3"

# gRPC / protobuf
tonic               = { version = "0.9", features = ["transport"] }
prost               = "0.11"

# Serialization
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"

# Error handling & logging
anyhow              = "1.0"
thiserror           = "1.0"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# Event bus (NATS) & message-oriented middleware
nats                = "0.23"

# Cryptography
rand                = "0.8"
ed25519-dalek       = { version = "1.0.1", features = ["serde"] }
blst                = { version = "0.3", optional = true }   # BLS12-381
pqcrypto            = { version = "0.7.1", optional = true } # Post-quantum suites

# Blockchain / substrate client (optional for governance / runtime querying)
subxt               = { version = "0.29", default-features = false, optional = true, features = ["substrate-compat"] }

# Smart-contract execution (Wasm)
wasmtime            = { version = "11.0", optional = true }

# Utilities
hex                 = "0.4"
prometheus          = { version = "0.13", optional = true } # Metrics / DeFi TVL gauges

################################################################################
# Feature flags – align with CanvasChain platform “capability modules”.        #
################################################################################
[features]
default          = ["wallet_integration", "token_management"]

wallet_integration = [
    "prost",
    "tonic",
    "serde",
    "tokio",
]

governance = [
    "subxt",
]

token_management = [
    "ed25519-dalek",
    "hex",
]

defi_protocols = [
    "prometheus",
]

smart_contracts = [
    "wasmtime",
    "blst",
]

# Experimental cryptography swap-outs
bls            = ["dep:blst"]
post_quantum   = ["dep:pqcrypto"]

################################################################################
# Dev & build dependencies                                                     #
################################################################################
[dev-dependencies]
tokio-test         = "0.4"
assert_matches     = "1.5"
pretty_assertions  = "1.4"

[build-dependencies]
prost-build        = "0.11"
tonic-build        = "0.9"

################################################################################
# Cargo profiles – tuned for deterministic reproducibility.                    #
################################################################################
[profile.release]
codegen-units = 1        # Better optimizations, reproducible builds
lto           = "fat"
panic         = "abort"
opt-level     = "z"
strip         = true

[profile.dev]
debug         = true
incremental   = true
overflow-checks = true
```